[package]
name = "subsync"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/ImTheSquid/subsync"
homepage = "https://github.com/ImTheSquid/subsync"
readme = "README.md"
authors = ["Jack Hogan <jackhogan11@gmail.com>"]
description = "A simple tool to synchronize subtitle files to their respective media files"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
humansize = "2.1.3"
inquire = "0.7.5"
